# advent-of-code

./: .gitignore  Cargo.toml  README.md
2015/: Cargo.toml
2015/src/: day1.rs  day3.rs  lib.rs
2018/: Cargo.toml
2018/src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day2.rs  day3.rs  day8.rs  lib.rs
2019/: Cargo.toml
2021/: Cargo.toml
2022/: Cargo.toml
aoctools/: Cargo.toml
aoctools/src/: grid.rs  iterext.rs  lib.rs  macros.rs
src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day15.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  iterext.rs  lib.rs  main.rs
