[package]
name = "aoc18"
version = "0.1.0"
authors = ["Dax Huiberts <daxhuiberts@gmail.com>"]

[dependencies]
itertools = "*"
regex = "*"
chrono = "*"
aoc-runner = "*"
aoc-runner-derive = "*"
aoctools = { git = "https://github.com/daxhuiberts/aoctools" }

[dev-dependencies]
indoc = "*"
lazy_static = "*"
